# trumporacle

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  claude.md  docker-compose.yml  justfile  pyproject.toml  stack.md  trumporacle.mdc
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260502_0001_initial_schema.py
config/: telegram_channels.example.json
deploy/caddy/: Caddyfile.example
deploy/systemd/: trumporacle.service.example
docker/db/: Dockerfile  init-extensions.sql
docs/: DATASHEET.md  MODEL_CARD.md  RETRAINING.md  ROADMAP.md
scripts/: audit_rubric.py  audit_ui.html  reannotate.py  register-task.ps1  tick.sh
src/trumporacle/: __init__.py  cli.py  config.py
src/trumporacle/dashboard/: __init__.py  metrics.py
src/trumporacle/dashboard/api/: __init__.py  app.py
src/trumporacle/dashboard/templates/: index.html.j2  predictions.html.j2
src/trumporacle/evaluation/: __init__.py  agreement.py  backtest.py  backtest_report.py  baselines.py  drift.py  validation_report.py
src/trumporacle/features/: __init__.py  ablation.py  windows.py
src/trumporacle/ingestion/: __init__.py  backfill.py  base.py  repository.py  sampling.py  truth_pipeline.py
src/trumporacle/ingestion/fox_captions/: __init__.py  pipeline.py
src/trumporacle/ingestion/podcasts/: __init__.py  pipeline.py
src/trumporacle/ingestion/rss/: __init__.py  client.py  feeds.py  pipeline.py
src/trumporacle/ingestion/telegram/: __init__.py  client.py
src/trumporacle/ingestion/truth_social/: __init__.py  client.py
src/trumporacle/nlp/: __init__.py  normalize.py
src/trumporacle/nlp/annotation/: __init__.py  labeler.py  rubric.py  schemas.py
src/trumporacle/nlp/embedding/: __init__.py  bge.py
src/trumporacle/orchestration/: __init__.py  alerts.py  jobs.py  mvp_tick.py
src/trumporacle/prediction/: __init__.py  calibration.py  mvp_features.py  mvp_predict.py  outcomes_live.py  time_grid.py  train_threshold.py
src/trumporacle/storage/: __init__.py  db.py
tests/: test_backfill_iter.py  test_backtest.py  test_backtest_report.py  test_baselines_properties.py  test_integration_db.py  test_mvp_predict.py  test_normalize.py  test_rss_feeds.py  test_sampling.py  test_validation_report.py  test_windows.py
